k8s/networkPolicies.yaml
# Deny incomming traffic by default
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: helpet-app
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---

# Allow incoming traffic to the frontend from anywhere
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-ingress
  namespace: helpet-app
spec:
  podSelector:
    matchLabels:
      run: helpet-frontend
  ingress:
    - ports:
        - port: 3000
          protocol: TCP
  policyTypes:
    - Ingress

---

# Allow outgoing traffic from the frontend to the backend 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: helpet-app
spec:
  podSelector:
    matchLabels:
      run: helpet-frontend
  egress:
    - to:
        - podSelector:
            matchLabels:
              run: helpet-backend
      ports:
      - port: 3001
        protocol: TCP
  policyTypes:
    - Egress

---

# Deny all incoming traffic to the backend except traffic from the frontend
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-backend-ingress
  namespace: helpet-app
spec:
  podSelector:
    matchLabels:
      run: helpet-backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              run: helpet-frontend
      ports:
      - port: 3001
        protocol: TCP
  policyTypes:
    - Ingress

---

# Allow access from the backend to the Azure MySQL
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-access
  namespace: helpet-app
spec:
  podSelector:
    matchLabels:
      run: helpet-backend
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: <Azure_SQL_DB_IP>/32  # Replace <Azure_SQL_DB_IP> with the actual IP of your Azure SQL Database
          ports:
            - protocol: TCP
              port: 3306
